see source code and the LICENSE file


2. Changelog
------------
This is a non-exhaustive (but still near complete) changelog for
Joomla! 1.6, including alpha and beta versions.
Our thanks to all those people who've contributed bug reports and
code fixes.

Legend:

* -> Security Fix
# -> Bug Fix
$ -> Language fix or change
+ -> Addition
^ -> Change
- -> Removed
! -> Note

28-Sep-2009 Ron Severdia
^ CSS cleanup
^ Changed commented-out to CSS hide in edit category

28-Sep-2009 Ron Severdia
# CSS fixes
$ Missing language strings added
^ Replaced tables from user config

28-Sep-2009 Gergo Erdosi
 # Fixed bug in installation SQL file.

28-Sep-2009 Andrew Eddie
+ Added JControllerForm (to support basic edit operations).
+ Added table jos_languages.
+ Added support to add and edit content languages.
^ Updated frontend content router to support more category path scenarios.
+ Added archived state support to JHtmlJGrid::published
+ Added ContentLanguages JForm field and JElement.

26-Sep-2009 Andrew Eddie
^ Install from directory now remembers previous path.
^ Refactored language installation error messages.
^ Forced language installation file to require client attribute.
^ Refactored System Debug language strings.
+ New options in System Debug plugin to more tightly control how the untranslated string present

25-Sep-2009 Mark Dexter
# Add extension to new Category in Content->Category Manager

23-Sep-2009 Hannes Papenberg
^ Added class and ID to radio buttons

21-Sep-2009 Mark Dexter
^ Merge from dextercowley branch
^ Layouts for frontend components
^ Make com_contact MVC
^ Fix a number of issues in in com_menus
^ Fix problem in administrator menu
^ Update strings

21-Sep-2009 Ron Severdia
# BlueStork CSS fixes
+ New icons
$ Language fixes
^ Replace tables in components

20-Sep-2009 Ron Severdia
# BlueStork CSS fixes
# Fixed submenu switcher
# Visual cleanup

20-Sep-2009 Hannes Papenberg