@@ -39,7 +39,7 @@ JHtml::_('behavior.formvalidation');
 			$label = isset($fieldSet['label']) ? $fieldSet['label'] : 'Config_'.$name;
 			echo $pane->startPanel(JText::_($label), 'publishing-details');
 			if (isset($fieldSet['description'])) :
-				echo '<p class="tip" style="float:right;">'.JText::_($fieldSet['description']).'</p>';
+				echo '<p class="tip fltrt">'.JText::_($fieldSet['description']).'</p>';
 			endif;
 	?>
 
