@@ -110,25 +110,25 @@ USERS_USER_ACCOUNT_DETAILS=Account Details
 USERS_USER_OPTIONS=User Options
 USERS_USER_PROFILE=User Profile
 
-USERS_USER_EMAIL_LABEL=User Email
-USERS_USER_EMAIL_DESC=User Email Desc
+USERS_USER_EMAIL_LABEL=Email
+USERS_USER_EMAIL_DESC=Email Desc
 USERS_USER_GID_LABEL=User GID
 USERS_USER_GID_DESC=User GID Desc
 USERS_USER_NAME_LABEL=User Name
-USERS_USER_PASSWORD_LABEL=User Password
-USERS_USER_PASSWORD2_LABEL=User Password2
+USERS_USER_PASSWORD_LABEL=Password
+USERS_USER_PASSWORD2_LABEL=Confirm Password
 USERS_USER_PASSWORD2_DESC=User Password2 Desc
 USERS_USER_PASSWORD_DESC=User Password Desc
 USERS_USER_USERNAME_LABEL=Login Name
 USERS_USER_USERNAME_DESC=User UserName Desc
-USERS_OPTION_BACKEND_LANGUAGE_LABEL=Backend Language
-USERS_OPTION_BACKEND_LANGUAGE_DESC=Backend Language Desc
+USERS_OPTION_BACKEND_LANGUAGE_LABEL=Back-end Language
+USERS_OPTION_BACKEND_LANGUAGE_DESC=Back-end Language Desc
 USERS_OPTION_EDITOR_LABEL=Editor
 USERS_OPTION_EDITOR_DESC=Editor Desc
-USERS_OPTION_FRONTEND_LANGUAGE_LABEL=Frontend Language
-USERS_OPTION_FRONTEND_LANGUAGE_DESC=Frontend Language Desc
-USERS_OPTION_HELPSITE_LABEL=Helpsite
-USERS_OPTION_HELPSITE_DESC=Helpsite Desc
+USERS_OPTION_FRONTEND_LANGUAGE_LABEL=Front-end Language
+USERS_OPTION_FRONTEND_LANGUAGE_DESC=Front-end Language Desc
+USERS_OPTION_HELPSITE_LABEL=Help Site
+USERS_OPTION_HELPSITE_DESC=Help site Desc
 USERS_OPTION_TIMEZONE_LABEL=Timezone
 USERS_OPTION_TIMEZONE_DESC=Timezone Desc
 
