@@ -22,10 +22,10 @@ MOD_MENU_COM_USERS_USER_MANAGER=User Manager
 MOD_MENU_COM_USERS_ADD_GROUP=Add New Group
 MOD_MENU_COM_USERS_ADD_USER=Add New User
 MOD_MENU_COM_USERS_ADD_LEVEL=Add New Access Level
-MOD_MENU_MASS_MAIL_USERS=Mod menu Mass Mail Users
-MOD_MENU_MEDIA_MANAGER=Mod Menu Media Manager
-MOD_MENU_NEW_PRIVATE_MESSAGE=Mod menu New Private Message
-MOD_MENU_READ_PRIVATE_MESSAGES=Mod menu Read Private Messages
+MOD_MENU_MASS_MAIL_USERS=Mass Mail Users
+MOD_MENU_MEDIA_MANAGER=Media Manager
+MOD_MENU_NEW_PRIVATE_MESSAGE=New Private Message
+MOD_MENU_READ_PRIVATE_MESSAGES=Read Private Messages
 
 
 MOD_MENU_HELP=Help
