@@ -27,6 +27,12 @@ $ -> Language fix or change
 - -> Removed
 ! -> Note
 
+
+28-Sep-2009 Ron Severdia
+# Fix visual issues in config/menus/users
+# Fix form structure & element order
+$ Fix language strings, CSS fixes
+
 28-Sep-2009 Ron Severdia
 ^ CSS cleanup
 ^ Changed commented-out to CSS hide in edit category
